[tool.poetry]
name = "myrec"
version = "0.1.0"
description = ""
authors = ["jone <jone9966@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.3"
pandas = "^2.0.1"
torch = "<2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
